# MergeGNG

./: .gitignore  .pre-commit-config.yaml  LICENSE  PylintSpell.txt  README.md  about.html  genindex.html  index.html  merge_growing_neural_gas.html  objects.inv  py-modindex.html  pylintrc  pyproject.toml  search.html  searchindex.js
_modules/: index.html
_modules/mgng/: helpers.html  mgng.html  validators.html
_sources/: merge_growing_neural_gas.rst.txt
_sources/api/: mgng.mgng.rst.txt  mgng.validators.rst.txt
api/: mgng.helpers.html  mgng.html  mgng.mgng.html  mgng.validators.html  modules.html
doc/: Makefile
doc/source/: about.rst  conf.py  index.md  index.rst  merge_growing_neural_gas.md
doc/source/api/: mgng.helpers.rst  mgng.rst  modules.rst
notebooks/: merge_growing_neural_gas.ipynb
scripts/: install_kernel.sh  mypy.sh  remove_vm.sh  uninstall_kernel.sh
src/lemonpy_mgng/: helpers.py  mgng.py
src/mgng/: __init__.py  helpers.py  mgng.py  validators.py
tests/: conftest.py  test_example.py
