[tool.poetry]
name = "mgng"
version = "0.1.1"
description = "mgng"
authors = ["Stefan Ulbrich <stefan.frank.ulbrich@gmail.com>"]
readme = "README.md"
classifiers = [
   "Private :: Do Not Upload", # https://github.com/sdispater/poetry/issues/302#issuecomment-467805206
]
packages = [
   { include = "mgng", from = "src"}
]
# build = 'build.py' # https://github.com/python-poetry/poetry/issues/11


[tool.poetry.dependencies]
python = "^3.7"
# scikit-learn = "^0.22.2"
numpy = "^1.18.1"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
sphinx = "^4.0.2"
ipykernel = "^5.1.4"
pylint = "^2.4.4"
autopep8 = "^1.5"
rope = "^0.19.0"
pytest = "^6.2.4"
pyenchant = "^3.0.1"
doc8 = "^0.8.0"
nbsphinx = "^0.5.1"
# scipy = "1.3.2"
recommonmark = "^0.7.1"
matplotlib = "^3.2.0"
# seaborn = "^0.10.0"
black = "^21.5b1"
nb_black = "^1.0.7"
mypy = "^0.812"
yapf = "^0.31.0"
ipywidgets = "^7.6.3"


[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

