[tool.poetry]
name = "mgng"
version = "0.1.1"
description = "mgng"
authors = ["Stefan Ulbrich"]
readme = "README.md"
classifiers = [
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
   "Programming Language :: Python :: 3 :: Only",
   "License :: OSI Approved :: MIT License"
]
packages = [
   { include = "mgng", from = "src"}
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"
pylint = "^2.4.4"
autopep8 = "^1.5"
rope = "^0.19.0"
pytest = "^6.2.4"
pyenchant = "^3.0.1"
doc8 = "^0.8.0"
matplotlib = "^3.2.0"
black = "^22.6.0"
nb_black = "^1.0.7"
mypy = "^0.971"
yapf = "^0.31.0"
ipywidgets = "^7.6.3"
myst-parser = "^0.18.0"
Sphinx = "^5.1.1"
pydata-sphinx-theme = "^0.9.0"
pre-commit = "^2.20.0"


[tool.black]
line-length = 100
target-version = ['py37']
xclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

